deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: event-hub-dao-deployment
spec:
  selector:
    matchLabels:
      app: event-hub-dao
      tier: backend
      track: stable
  replicas: 1
  template:
    metadata:
      labels:
        app: event-hub-dao
        tier: backend
        track: stable
    spec:
      volumes:
      - name: firestore-key
        secret:
          secretName: firestore-key
      containers:
        - name: event-hub-dao
          image: "gcr.io/event-hub-249001/event-hub-dao:0.0.1-SNAPSHOT"
          volumeMounts:
          - name: firestore-key
            mountPath: /var/secrets/google
          ports:
            - name: http
              containerPort: 80
