egress-rule-google-apis.yaml
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: googleapis
spec:
  hosts:
  - "*.googleapis.com"
  ports:
  - number: 443
    name: https
    protocol: HTTPS
  location: MESH_EXTERNAL
  resolution: DNS
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: googleapis
spec:
  hosts:
  - "*.googleapis.com"
  tls:
  - match:
    - port: 443
      sni_hosts:
      - "*.googleapis.com"
    route:
    - destination:
        host: "*.googleapis.com"
        port:
          number: 443
      weight: 100
